@@ -149,6 +149,11 @@ pkg_config() {
 		eerror "Please update it via `eselect ruby`"
 		die
 	fi
+	if [[ $RUBY_TARGETS != *$( eselect ruby show | awk 'NR==2' | tr  -d ' '  )* ]]; then
+		eerror "/usr/bin/ruby is currently not included in redmine's ruby targets: ${RUBY_TARGETS}."
+		eerror "Please update it via `eselect ruby`"
+		die
+	fi
 	local RUBY=${RUBY:-ruby}
 
 	cd "${EPREFIX}${REDMINE_DIR}" || die
